WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
38445
REGRESSION: Infinite recursion in Position::getInlineBoxAndOffset()
https://bugs.webkit.org/show_bug.cgi?id=38445
Summary
REGRESSION: Infinite recursion in Position::getInlineBoxAndOffset()
mitz
Reported
2010-05-02 20:47:26 PDT
Another case of <
rdar://problem/7552959
>. Patch forthcoming.
Attachments
Patch
(6.66 KB, patch)
2010-05-02 21:04 PDT
,
mitz
simon.fraser
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
mitz
Comment 1
2010-05-02 21:04:27 PDT
Created
attachment 54901
[details]
Patch
Simon Fraser (smfr)
Comment 2
2010-05-02 21:13:33 PDT
Comment on
attachment 54901
[details]
Patch
> Index: WebCore/ChangeLog > ===================================================================
> + possible, crossing any editability boudaries. Infinite recursion is avoided by advancing all the way
Typo: "boudaries"
> Index: WebCore/dom/Position.cpp > ===================================================================
> +static Position downstreamIgnoringEditingBoundaries(Position position)
Should this take a const Position&?
> +static Position upstreamIgnoringEditingBoundaries(Position position)
Ditto WebCore/ChangeLog:18 + test for buttons with the generic and more comprehensive canHaveChildrenForEditing(). Does this part of the change need its own testcase? r=me
mitz
Comment 3
2010-05-02 21:20:56 PDT
(In reply to
comment #2
)
> > +static Position downstreamIgnoringEditingBoundaries(Position position) > > Should this take a const Position&?
It’d have to be copied anyway, and this was easier to write.
> + test for buttons with the generic and more comprehensive > canHaveChildrenForEditing(). > > Does this part of the change need its own testcase?
Existing tests crash without it. Thanks for the review!
mitz
Comment 4
2010-05-02 21:26:21 PDT
Fixed in <
http://trac.webkit.org/projects/webkit/changeset/58665
>.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug