Another case of <rdar://problem/7552959> REGRESSION: Infinite recursion in Position::getInlineBoxAndOffset() https://bugs.webkit.org/show_bug.cgi?id=38445

Reviewed by Simon Fraser.

WebCore:

Test: editing/selection/mixed-editability-11.html

* dom/Position.cpp:
(WebCore::downstreamIgnoringEditingBoundaries): Added. Returns the furthest visually equivalent
position downstream, crossing any editability boundaries.
(WebCore::upstreamIgnoringEditingBoundaries): Similarly for upstream.
(WebCore::Position::getInlineBoxAndOffset): Changed the logic for finding an inline box for positions
whose node is a block flow. Instead of traversing the DOM, advance downstream or upstream as far as
possible, crossing any editability boudaries. Infinite recursion is avoided by advancing all the way
and checking that the new position is different from the starting position. Also replaced the specific
test for buttons with the generic and more comprehensive canHaveChildrenForEditing().

LayoutTests:

* editing/selection/mixed-editability-11-expected.txt: Added.
* editing/selection/mixed-editability-11.html: Added.



Canonical link: https://commits.webkit.org/49920@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@58665 268f45cc-cd09-0410-ab3c-d52691b4dbfc